--- a/tests/client/CMakeLists.txt
+++ b/tests/client/CMakeLists.txt
@@ -45,7 +45,8 @@ endif()
 if (WITH_GSSAPI AND GSSAPI_FOUND AND GSSAPI_TESTING)
     set(LIBSSH_CLIENT_TESTS
         ${LIBSSH_CLIENT_TESTS}
-        torture_gssapi_auth)
+        torture_gssapi_auth
+        torture_gssapi_key_exchange)
 endif()
 
 if (DEFAULT_C_NO_DEPRECATION_FLAGS)
