--- a/tests/client/CMakeLists.txt
+++ b/tests/client/CMakeLists.txt
@@ -46,7 +46,8 @@ if (WITH_GSSAPI AND GSSAPI_FOUND AND GSSAPI_TESTING)
     set(LIBSSH_CLIENT_TESTS
         ${LIBSSH_CLIENT_TESTS}
         torture_gssapi_auth
-        torture_gssapi_key_exchange)
+        torture_gssapi_key_exchange
+        torture_gssapi_key_exchange_null)
 endif()
 
 if (DEFAULT_C_NO_DEPRECATION_FLAGS)
