--- a/tests/server/CMakeLists.txt
+++ b/tests/server/CMakeLists.txt
@@ -20,7 +20,8 @@ if (WITH_GSSAPI AND GSSAPI_FOUND AND GSSAPI_TESTING)
         torture_gssapi_server_auth
         torture_gssapi_server_auth_cb
         torture_gssapi_server_delegation
-        torture_gssapi_server_key_exchange)
+        torture_gssapi_server_key_exchange
+        torture_gssapi_server_key_exchange_null)
 endif()
 
 include_directories(${libssh_SOURCE_DIR}/include
