--- a/tests/client/CMakeLists.txt
+++ b/tests/client/CMakeLists.txt
@@ -18,7 +18,9 @@ set(LIBSSH_CLIENT_TESTS
     torture_session
     torture_request_env
     torture_request_pty_modes
-    torture_client_global_requests)
+    torture_client_global_requests
+    torture_get_kex_algo
+    )
 
 find_program(SCP_EXECUTABLE NAMES scp)
 if (SCP_EXECUTABLE)
