curve25519: add support for gcrypt's Curve25519 implementation
Signed-off-by: Praneeth Sarode <praneethsarode@gmail.com>
Reviewed-by: Jakub Jelen <jjelen@redhat.com>

--- a/tests/external_override/CMakeLists.txt
+++ b/tests/external_override/CMakeLists.txt
@@ -98,7 +98,7 @@ if (WITH_MBEDTLS)
     else ()
         list(APPEND OVERRIDE_RESULTS "-DSHOULD_CALL_INTERNAL_CHACHAPOLY=1")
     endif ()
-    
+
     if(HAVE_MBEDTLS_CURVE25519)
         list(APPEND OVERRIDE_RESULTS "-DSHOULD_CALL_INTERNAL_CURVE25519=0")
     else ()
@@ -113,8 +113,14 @@ elseif (WITH_GCRYPT)
     else ()
         list(APPEND OVERRIDE_RESULTS "-DSHOULD_CALL_INTERNAL_CHACHAPOLY=1")
     endif ()
+
+    if(HAVE_GCRYPT_CURVE25519)
+        list(APPEND OVERRIDE_RESULTS "-DSHOULD_CALL_INTERNAL_CURVE25519=0")
+    else()
+        list(APPEND OVERRIDE_RESULTS "-DSHOULD_CALL_INTERNAL_CURVE25519=1")
+    endif()
+
     list(APPEND OVERRIDE_RESULTS "-DSHOULD_CALL_INTERNAL_ED25519=1")
-    list(APPEND OVERRIDE_RESULTS "-DSHOULD_CALL_INTERNAL_CURVE25519=1")
     list(APPEND OVERRIDE_RESULTS "-DSHOULD_CALL_INTERNAL_SNTRUP761=0")
 else ()
     if (HAVE_OPENSSL_EVP_CHACHA20)
