Move the PKCS#11 provider environment variable where it needs to be
Signed-off-by: Jakub Jelen <jjelen@redhat.com>
Reviewed-by: Sahana Prasad <sahana@redhat.com>
Reviewed-by: Norbert Pocs <norbertpocs0@gmail.com>

--- a/tests/unittests/CMakeLists.txt
+++ b/tests/unittests/CMakeLists.txt
@@ -80,8 +80,9 @@ if (UNIX AND NOT WIN32)
                 ${LIBSSH_UNIT_TESTS}
                 torture_pki_ed25519_uri
             )
+            list(APPEND TORTURE_UNIT_ENVIRONMENT
+                 PKCS11_PROVIDER_DEBUG=file:/tmp/p11prov-debug.log)
         endif()
-        list(APPEND TORTURE_UNIT_ENVIRONMENT PKCS11_PROVIDER_DEBUG=file:/tmp/p11prov-debug.log)
     endif()
 
     if (HAVE_ECC)
