Added tests for auth agent forwarding
Signed-off-by: salonidabgar <salonidabgar@gmail.com>
Reviewed-by: Jakub Jelen <jjelen@redhat.com>

--- a/tests/client/CMakeLists.txt
+++ b/tests/client/CMakeLists.txt
@@ -4,12 +4,13 @@ find_package(socket_wrapper)
 
 set(LIBSSH_CLIENT_TESTS
     torture_algorithms
+    torture_auth
+    torture_auth_cert
+    torture_auth_agent_forwarding
     torture_client_callbacks
     torture_client_config
     torture_connect
     torture_hostkey
-    torture_auth
-    torture_auth_cert
     torture_rekey
     torture_forward
     torture_knownhosts
