tests: Fix build script to work also on MacOS correctly
Signed-off-by: Jakub Jelen <jjelen@redhat.com>
Reviewed-by: Andreas Schneider <asn@cryptomilk.org>
(cherry picked from commit c2e9d39dbe63936354b50d70ff6a38c811dada69)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,9 +24,10 @@ if (NOT WIN32)
         pthread)
 endif(NOT WIN32)
 if (WITH_GSSAPI AND GSSAPI_FOUND)
+    find_package(OpenSSL 1.1.1 REQUIRED)
     set(TORTURE_LINK_LIBRARIES
         ${TORTURE_LINK_LIBRARIES}
-        crypto)
+        OpenSSL::Crypto)
 endif (WITH_GSSAPI AND GSSAPI_FOUND)
 
 # create test library
