fido2: implement the default sk_callbacks for FIDO2/U2F keys using the usb-hid protocol
Signed-off-by: Praneeth Sarode <praneethsarode@gmail.com>
Reviewed-by: Jakub Jelen <jjelen@redhat.com>
Reviewed-by: Eshan Kelkar <eshankelkar@galorithm.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -310,6 +310,13 @@ if (WITH_FIDO2)
         ${libssh_SRCS}
         sk_common.c
     )
+
+    if (HAVE_LIBFIDO2)
+        set(libssh_SRCS
+            ${libssh_SRCS}
+            sk_usbhid.c
+        )
+    endif (HAVE_LIBFIDO2)
 endif (WITH_FIDO2)
 
 # Set the path to the default map file
