feat(pki): add security key support with enrollment, signing, and resident key loading functions
Signed-off-by: Praneeth Sarode <praneethsarode@gmail.com>
Reviewed-by: Jakub Jelen <jjelen@redhat.com>
Reviewed-by: Eshan Kelkar <eshankelkar@galorithm.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -310,6 +310,7 @@ if (WITH_FIDO2)
     set(libssh_SRCS
         ${libssh_SRCS}
         sk_common.c
+        pki_sk.c
     )
 
     if (HAVE_LIBFIDO2)
