tests(fido2): add sk-dummy support to the testing infrastructure
Signed-off-by: Praneeth Sarode <praneethsarode@gmail.com>
Reviewed-by: Jakub Jelen <jjelen@redhat.com>
Reviewed-by: Eshan Kelkar <eshankelkar@galorithm.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,6 +30,15 @@ if (WITH_GSSAPI AND GSSAPI_FOUND)
         OpenSSL::Crypto)
 endif (WITH_GSSAPI AND GSSAPI_FOUND)
 
+# Check for sk-dummy library if FIDO2 support is enabled
+if (WITH_FIDO2)
+    find_file(SK_DUMMY_LIBRARY
+        NAMES sk-dummy.so
+        PATHS /usr/lib64/sshtest /usr/lib/sshtest
+        NO_DEFAULT_PATH
+    )
+endif (WITH_FIDO2)
+
 # create test library
 add_library(${TORTURE_LIBRARY}
             STATIC
@@ -43,6 +52,16 @@ target_link_libraries(${TORTURE_LIBRARY} PRIVATE ${TORTURE_LINK_LIBRARIES})
 target_compile_options(${TORTURE_LIBRARY} PRIVATE
                        -DSSH_PING_EXECUTABLE="${CMAKE_CURRENT_BINARY_DIR}/ssh_ping"
 )
+
+# Check for sk-dummy and add HAVE_SK_DUMMY definition if available
+if (SK_DUMMY_LIBRARY)
+    add_library(sk-dummy SHARED IMPORTED)
+    set_target_properties(sk-dummy PROPERTIES IMPORTED_LOCATION "${SK_DUMMY_LIBRARY}")
+    target_link_libraries(${TORTURE_LIBRARY} PRIVATE sk-dummy)
+    target_compile_definitions(${TORTURE_LIBRARY} PUBLIC HAVE_SK_DUMMY)
+    target_compile_definitions(${TORTURE_LIBRARY} PUBLIC SK_DUMMY_LIBRARY_PATH="${SK_DUMMY_LIBRARY}")
+endif()
+
 if (WITH_COVERAGE)
     append_coverage_compiler_flags_to_target(${TORTURE_LIBRARY})
 endif (WITH_COVERAGE)
@@ -86,6 +105,14 @@ if (CLIENT_TESTING)
                           ssh::static
                           ${WRAP_SYMBOLS}
                          )
+
+    # Link sk-dummy to torture_shared library if available
+    if (SK_DUMMY_LIBRARY)
+        target_link_libraries(${TORTURE_SHARED_LIBRARY} PRIVATE sk-dummy)
+        target_compile_definitions(${TORTURE_SHARED_LIBRARY} PUBLIC HAVE_SK_DUMMY)
+        target_compile_definitions(${TORTURE_SHARED_LIBRARY} PUBLIC SK_DUMMY_LIBRARY_PATH="${SK_DUMMY_LIBRARY}")
+    endif (SK_DUMMY_LIBRARY)
+
     target_compile_options(${TORTURE_SHARED_LIBRARY} PRIVATE
                            -DSSH_PING_EXECUTABLE="${CMAKE_CURRENT_BINARY_DIR}/ssh_ping"
                            -DTORTURE_SHARED
