ci: Add cmocka.cfg to avoid false positives reports from csbuild
Based on cmocka changes:

https://gitlab.com/cmocka/cmocka/-/blob/master/cppcheck/cmocka.cfg

https://gitlab.com/cmocka/cmocka/-/blob/master/.gitlab-ci.yml#L148

Signed-off-by: Jakub Jelen <jjelen@redhat.com>
Reviewed-by: Andreas Schneider <asn@cryptomilk.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -382,6 +382,7 @@ fedora/mingw32:
   stage: analysis
   variables:
     GIT_DEPTH: "100"
+    CSCPPC_ADD_OPTS: "--library=./.gitlab-ci/cmocka.cfg"
   image: $CI_REGISTRY/$BUILD_IMAGES_PROJECT:$FEDORA_BUILD
   before_script:
     - |
